--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 /venv
-/InspectionsProfiles
-/.idea/vcs.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/Stepik_Web_techology.iml
-/.idea/inspectionProfiles/
-/.idea/.gitignore
+/.idea/
+
